force-app/main/default/objects/redwing__vILT_Account_Member__c/redwing__vILT_Account_Member__c.object-meta.xml
<CustomObject>
    <label>vILT Account Member</label>
    <nameField>
        <label>vILT Account Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>vILT Account Members</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>