force-app/main/default/objects/redwing__vILT_Account_Member__c/fields/redwing__External_User__c.field-meta.xml
<CustomField>
    <fullName>redwing__External_User__c</fullName>
    <label>External User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>