force-app/main/default/objects/redwing__vILT_Account_Member__c/fields/redwing__User__c.field-meta.xml
<CustomField>
    <fullName>redwing__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>vILT_Account_Members</relationshipName>
    <type>Lookup</type>
</CustomField>