force-app/main/default/objects/redwing__vILT_Account_Member__c/fields/redwing__vILT_Account__c.field-meta.xml
<CustomField>
    <fullName>redwing__vILT_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>vILT Account</label>
    <referenceTo>redwing__vILT_Account__c</referenceTo>
    <relationshipLabel>vILT Account Members</relationshipLabel>
    <relationshipName>vILT_Account_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>